GetGenresWithCount implemented, fixes
